--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <%= link_to "Sign in", new_session_path %>
     <%= link_to "Sign up", new_user_path %>
   <% end %>
+
+  <h1><%= link_to "Taskr", root_path %></h1>
   <%= yield %>
 
 </body>
