--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,3 +1,7 @@
 <li>
   <%= task.title %> -- <%= task.description %>
+  <%= form_for task do |form| %>
+    <%= form.hidden_field :completed, value: 1 %>
+    <%= form.submit "Complete task" %>
+  <% end %>
 </li>
