Change names and add ids to uls

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,16 +19,16 @@
 <% end %>
 
 <h4>Incomplete tasks</h4>
-<ul>
+<ul id="incomplete_tasks_list">
   <%= render @incomplete_tasks %>
 </ul>
 
 <h4>Completed tasks</h4>
-<ul>
+<ul id="complete_tasks_list">
   <%= render @completed_tasks %>
 </ul>
 
 <h4>All Tasks</h4>
-<ul>
+<ul id="tasks_list">
   <%= render @tasks %>
 </ul>
