Render errors if thask failed to save

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Here are your tasks</h3>
 
-<%= render "error_messages", target: @task %>
+<div id="errors"></div>
 
 <%= form_for @task do |form| %>
   <div>
