--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,17 +1,17 @@
 <li id="<%= dom_id(task) %>" >
   <%= task.title %> -- <%= task.description %>
 
-  <% if task.completed == false %>
-    <%= form_for task do |form| %>
+  <% if ! task.completed? %>
+    <%= form_for task, html: { class: "complete-form" } do |form| %>
       <%= form.hidden_field :completed, value: 1 %>
       <%= form.submit "Complete task" %>
     <% end %>
   <% else %>
-    <%= form_for task do |form| %>
+    <%= form_for task, html: { class: "incomplete-form" }  do |form| %>
       <%= form.hidden_field :completed, value: 0 %>
       <%= form.submit "Task incomplete" %>
     <% end %>
   <% end %>
 
-  <%= button_to "Delete task", task_path(task), method: :delete %>
+  <%= button_to "Delete task", task_path(task), method: :delete, html: { class: "delete-form" } %>
 </li>
